--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
 		<header>
 			<video autoplay muted loop>
 				<source src="assets/img/comp2_9.mp4" type="video/mp4">
-				Your browser does not support HTML5 video.
+				<!-- Your browser does not support HTML5 video. -->
 			</video>
 			<div class="container">
 				<div class="flex">
