--- a/full.html
+++ b/full.html
@@ -4,11 +4,11 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Background Video  - fullPage.js</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage full-screen background videos." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,video,full-screen" />
-	<meta name="Resource-type" content="Document" />
+	<meta name="viewport" content="width=device-width, user-scalable=0">
+	<meta name="robots" content="noindex">
+	<meta name="googlebot" content="noindex">
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon"/>
+	<title>Hound</title>
 	<link rel="stylesheet" type="text/css" href="https://alvarotrigo.com/fullPage/fullpage.css" />
 	<link rel="stylesheet" href="assets/css/main2.css">
 </head>
