--- a/full.html
+++ b/full.html
@@ -65,7 +65,7 @@
 								<img src="assets/img/triangle.png" alt="">
 							</div>
 						</div>
-						<ul class="app-list list-reset flex">
+						<ul class="app-list list-reset flex desktop">
 							<li class="app-logo"><a href="#!"><img src="assets/img/google_play@3x.png" alt=""></a></li>
 							<li><a href="#!"><img src="assets/img/hound13.png" alt=""></a></li>
 							<li class="app-logo"><a href="#!"><img src="assets/img/apple_store@3x.png" alt=""></a></li>
@@ -632,6 +632,11 @@
 			</div>
 		</div>
 	</div>
+	<ul class="app-list list-reset flex mobile">
+		<li class="app-logo"><a href="#!"><img src="assets/img/google_play@3x.png" alt=""></a></li>
+		<li><a href="#!"><img src="assets/img/hound13.png" alt=""></a></li>
+		<li class="app-logo"><a href="#!"><img src="assets/img/apple_store@3x.png" alt=""></a></li>
+	</ul>
 	<footer>
 		<div class="container">
 			<div class="flex">
