--- a/full.html
+++ b/full.html
@@ -652,6 +652,7 @@
 			</div>
 		</div>
 	</footer>
+	<div class="animation mobile"><i class="icon icon-down"></i></div>
 	<div class="black"></div>
 	<div class="lightbox lightbox--video">
 		<div class="lightbox__wrap">
