--- a/full.html
+++ b/full.html
@@ -50,6 +50,7 @@
 						<img src="assets/img/HS_Logo.png" alt="">
 						<i class="icon icon-play function--playFullScreen" data-video="07uyx4d0DpY"></i>
 						<div class="slider slider--application">
+							<img src="assets/img/applicationBlank.png" alt="">
 							<ul class="slider__image list-reset">
 								<li class="active">
 									<img src="assets/img/application01.png" alt="">
