--- a/full.html
+++ b/full.html
@@ -10,6 +10,7 @@
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon"/>
 	<title>Hound</title>
 	<link rel="stylesheet" type="text/css" href="https://alvarotrigo.com/fullPage/fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/swiper.min.css" />
 	<link rel="stylesheet" href="assets/css/main2.css">
 </head>
 <body>
@@ -255,8 +256,8 @@
 		</div>
 		<div class="section slider slider-bg slider-fellow">
 			<img src="assets/img/fellow-title.png" alt="副官" class="item-title">
-			<div class="item-container">
-				<div class="slider slider-infinite">
+			<div class="item-container adjutantSlide">
+				<!-- <div class="slider slider-infinite">
 					<div class="slider-wrap">
 						<div class="slider-item">
 							<div class="fellow-img fellow-img--set">
@@ -334,6 +335,41 @@
 							<p class="sr-only">讓敵人陷入束縛狀態，曾獲得雷蒙大師的指導</p>
 							<img src="assets/img/adCha-6.png" alt="">
 						</div>
+					</div>
+				</div> -->
+				<div class="slideBox slider-fellow">
+					<div class="inner">
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide no1">
+									<div class="item">
+										<div class="img"><img src="assets/img/adCha04_active.png" alt=""></div>
+									</div>
+								</div>
+								<div class="swiper-slide no2">
+									<div class="item">
+										<div class="img"><img src="assets/img/adCha02_active.png" alt="부관"></div>
+									</div>
+								</div>
+								<div class="swiper-slide no3">
+									<div class="item">
+										<div class="img"><img src="assets/img/adCha03_active.png" alt="설명"></div>
+									</div>
+								</div>
+								<div class="swiper-slide no4">
+									<div class="item">
+										<div class="img"><img src="assets/img/adCha04_active.png" alt="설명"></div>
+									</div>
+								</div>
+								<div class="swiper-slide no5">
+									<div class="item">
+										<div class="img"><img src="assets/img/adCha05_active.png" alt="설명"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination">
 					</div>
 				</div>
 			</div>
@@ -667,14 +703,19 @@
 	</div>
 	<script type="text/javascript" src="assets/js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="https://alvarotrigo.com/fullPage/fullpage.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="assets/js/swiper.min.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 	<script type="text/javascript">
-		var myFullpage = new fullpage('#fullpage', {
+		$('#fullpage').fullpage({
 			anchors: ['header', 'gameMenu', 'monster', 'fellow', 'equipmentMain', 'equipmentSub'],
-			licenseKey: null,
 			verticalCentered: true,
-			menu: '#nav'
+			menu: '#nav',
+			//lockAnchors :true,
+			//autoScrolling: false,
+			lazyLoading: true,
+			responsiveHeight: 900,
+			navigation: true
 		});
 	</script>
 </body>
