--- a/full.html
+++ b/full.html
@@ -39,6 +39,34 @@
 			</div>
 		</div>
 	</nav>
+	<div class="storage desktop">
+		<div class="storage__open">
+			<i class="icon icon-right"></i>
+		</div>
+		<div class="storage__content slider slider-mobile">
+			<ul class="slider-wrap list-reset">
+				<li class="slider-item">
+					<a href="#!" target="_blank">
+						<img src="assets/img/banner01.png" alt="">
+					</a>
+				</li>
+				<li class="slider-item">
+					<a href="#!" target="_blank">
+						<img src="assets/img/banner02.png" alt="">
+					</a>
+				</li>
+				<li class="slider-item">
+					<a href="#!" target="_blank">
+						<img src="assets/img/banner03.png" alt="">
+					</a>
+				</li>
+			</ul>
+			<ul class="slider-navi list-reset mobile">
+				<li class="slider-navi--prev"><i class="icon icon-slider-left"></i></li>
+				<li class="slider-navi--next"><i class="icon icon-slider-right"></i></li>
+			</ul>
+		</div>
+	</div>
 	<div id="fullpage">
 		<header class="section">
 			<video autoplay muted loop poster="assets/img/1920x1080.jpg" data-autoplay>
@@ -69,7 +97,7 @@
 						</div>
 						<ul class="app-list list-reset flex desktop">
 							<li class="app-logo"><a href="#!"><img src="assets/img/google_play@3x.png" alt=""></a></li>
-							<li><a href="#!"><img src="assets/img/hound13.png" alt=""></a></li>
+							<li><a href="#!"><img src="assets/img/hound13-app.png" alt=""></a></li>
 							<li class="app-logo"><a href="#!"><img src="assets/img/apple_store@3x.png" alt=""></a></li>
 						</ul>
 						<div class="coptText">
@@ -84,6 +112,34 @@
 				</div>
 			</div>
 		</header>
+		<div class="section storage mobile">
+			<div class="storage__open">
+				<i class="icon icon-right"></i>
+			</div>
+			<div class="storage__content slider slider-mobile">
+				<ul class="slider-wrap list-reset">
+					<li class="slider-item">
+						<a href="#!" target="_blank">
+							<img src="assets/img/banner01.png" alt="">
+						</a>
+					</li>
+					<li class="slider-item">
+						<a href="#!" target="_blank">
+							<img src="assets/img/banner02.png" alt="">
+						</a>
+					</li>
+					<li class="slider-item">
+						<a href="#!" target="_blank">
+							<img src="assets/img/banner03.png" alt="">
+						</a>
+					</li>
+				</ul>
+				<ul class="slider-navi list-reset mobile">
+					<li class="slider-navi--prev"><i class="icon icon-slider-left"></i></li>
+					<li class="slider-navi--next"><i class="icon icon-slider-right"></i></li>
+				</ul>
+			</div>
+		</div>
 		<div class="section slider slider-bg slider-game-menu">
 			<div class="flex card-group desktop">
 				<a class="card-item" href="#monster">
@@ -257,76 +313,42 @@
 		<div class="section slider slider-bg slider-fellow">
 			<img src="assets/img/fellow-title.png" alt="副官" class="item-title">
 			<div class="item-container adjutantSlide">
-				<!-- <div class="slider slider-infinite">
-					<div class="slider-wrap">
-						<div class="slider-item">
-							<div class="fellow-img fellow-img--set">
-								<img src="assets/img/adCha01.png" alt="">
-								<img src="assets/img/adCha01_on.png" alt="" class="on">
+				<div class="slider-group">
+					<div class="slideBox slider-fellow">
+						<div class="inner">
+							<div class="swiper-container">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide no1">
+										<div class="item">
+											<div class="img"><img src="assets/img/adCha04_active.png" alt=""></div>
+										</div>
+									</div>
+									<div class="swiper-slide no2">
+										<div class="item">
+											<div class="img"><img src="assets/img/adCha02_active.png" alt="부관"></div>
+										</div>
+									</div>
+									<div class="swiper-slide no3">
+										<div class="item">
+											<div class="img"><img src="assets/img/adCha03_active.png" alt="설명"></div>
+										</div>
+									</div>
+									<div class="swiper-slide no4">
+										<div class="item">
+											<div class="img"><img src="assets/img/adCha04_active.png" alt="설명"></div>
+										</div>
+									</div>
+									<div class="swiper-slide no5">
+										<div class="item">
+											<div class="img"><img src="assets/img/adCha05_active.png" alt="설명"></div>
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class="fellow-img fellow-img--active">
-								<img src="assets/img/adCha01_active.png" alt="">
-							</div>
-							<h4 class="sr-only">開朗的突擊少女</h4>
-							<h3 class="sr-only">菲力帕</h3>
-							<p class="sr-only">讓敵人陷入暈眩狀態，破壞霸體的專門副官</p>
 						</div>
-						<div class="slider-item">
-							<div class="fellow-img fellow-img--set">
-								<img src="assets/img/adCha02.png" alt="">
-								<img src="assets/img/adCha02_on.png" alt="" class="on">
-							</div>
-							<div class="fellow-img fellow-img--active">
-								<img src="assets/img/adCha02_active.png" alt="">
-							</div>
-							<h4 class="sr-only">北方守護者</h4>
-							<h3 class="sr-only">基加提克</h3>
-							<p class="sr-only">讓敵人陷入浮空狀態，擊倒狀態後附加額外的打擊</p>
-						</div>
-						<div class="slider-item active">
-							<div class="fellow-img fellow-img--set">
-								<img src="assets/img/adCha03.png" alt="">
-								<img src="assets/img/adCha03_on.png" alt="" class="on">
-							</div>
-							<div class="fellow-img fellow-img--active">
-								<img src="assets/img/adCha03_active.png" alt="">
-							</div>
-							<h4 class="sr-only">森林守護者</h4>
-							<h3 class="sr-only">娜絲瑞</h3>
-							<p class="sr-only">讓敵人陷入暈眩狀態，浮空狀態後給予額外的打擊</p>
-						</div>
-						<div class="slider-item">
-							<div class="fellow-img fellow-img--set">
-								<img src="assets/img/adCha04.png" alt="">
-								<img src="assets/img/adCha04_on.png" alt="" class="on">
-							</div>
-							<div class="fellow-img fellow-img--active">
-								<img src="assets/img/adCha04_active.png" alt="">
-							</div>
-							<h4 class="sr-only">女神之子</h4>
-							<h3 class="sr-only">拉黎卡</h3>
-							<p class="sr-only">專門輔助我軍攻擊且治癒傷勢，解除狀態異常回復瀕死狀態</p>
-						</div>
-						<div class="slider-item">
-							<div class="fellow-img fellow-img--set">
-								<img src="assets/img/adCha05.png" alt="">
-								<img src="assets/img/adCha05_on.png" alt="" class="on">
-							</div>
-							<div class="fellow-img fellow-img--active">
-								<img src="assets/img/adCha05_active.png" alt="">
-							</div>
-							<h4 class="sr-only">炙烈的火焰魔女</h4>
-							<h3 class="sr-only">凱倫</h3>
-							<p class="sr-only">讓敵人陷入灼傷、暈眩狀態，灼傷狀態爆炸後造成範圍攻擊</p>
+						<div class="swiper-pagination">
 						</div>
 					</div>
-					<ul class="slider-dot list-reset">
-						<li></li>
-						<li></li>
-						<li class="active"></li>
-						<li></li>
-						<li></li>
-					</ul>
 					<div class="slider-hide">
 						<div class="slider-arrow"><i class="icon icon-slider-right"></i></div>
 						<div class="slider-item">
@@ -335,41 +357,6 @@
 							<p class="sr-only">讓敵人陷入束縛狀態，曾獲得雷蒙大師的指導</p>
 							<img src="assets/img/adCha-6.png" alt="">
 						</div>
-					</div>
-				</div> -->
-				<div class="slideBox slider-fellow">
-					<div class="inner">
-						<div class="swiper-container">
-							<div class="swiper-wrapper">
-								<div class="swiper-slide no1">
-									<div class="item">
-										<div class="img"><img src="assets/img/adCha04_active.png" alt=""></div>
-									</div>
-								</div>
-								<div class="swiper-slide no2">
-									<div class="item">
-										<div class="img"><img src="assets/img/adCha02_active.png" alt="부관"></div>
-									</div>
-								</div>
-								<div class="swiper-slide no3">
-									<div class="item">
-										<div class="img"><img src="assets/img/adCha03_active.png" alt="설명"></div>
-									</div>
-								</div>
-								<div class="swiper-slide no4">
-									<div class="item">
-										<div class="img"><img src="assets/img/adCha04_active.png" alt="설명"></div>
-									</div>
-								</div>
-								<div class="swiper-slide no5">
-									<div class="item">
-										<div class="img"><img src="assets/img/adCha05_active.png" alt="설명"></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="swiper-pagination">
 					</div>
 				</div>
 			</div>
@@ -669,22 +656,31 @@
 			</div>
 		</div>
 	</div>
+	<ul class="slider-lr-navi list-reset" id="sideMenu">
+		<li class="first"><a href="#monster">魔物</a></li>
+		<li class="first"><a href="#fellow">副官</a></li>
+		<li class="first eq-title"><a href="#equipmentMain">武器</a></li>
+		<li class="second eq-main"><a href="#equipmentMain">主武器</a></li>
+		<li class="second eq-sub"><a href="#equipmentSub">輔助武器</a></li>
+	</ul>
 	<ul class="app-list list-reset flex mobile">
 		<li class="app-logo"><a href="#!"><img src="assets/img/google_play@3x.png" alt=""></a></li>
-		<li><a href="#!"><img src="assets/img/hound13.png" alt=""></a></li>
+		<li><a href="#!"><img src="assets/img/hound13-app.png" alt=""></a></li>
 		<li class="app-logo"><a href="#!"><img src="assets/img/apple_store@3x.png" alt=""></a></li>
 	</ul>
 	<footer>
 		<div class="container">
 			<div class="flex">
-				<ul class="sns flex list-reset">
+				<ul class="sns flex list-reset desktop">
 					<li><a href="https://www.facebook.com/hundredsoul.tw" target="_blank"><i class="icon icon-facebook"></i></a></li>
 					<li><a href="https://www.instagram.com/hundredsoul_tw/" target="_blank"><i class="icon icon-instagram"></i></a></li>
 					<li><a href="https://twitter.com/HundredSoulTW" target="_blank"><i class="icon icon-twitter"></i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCJKom9AdipwO58HMVMMrx8w/" target="_blank"><i class="icon icon-youtube"></i></a></li>
 				</ul>
 				<div class="copyright">
+					<img src="assets/img/hound13.png" alt="" class="mobile">
 					<p class="mtb0">ⓒ 2019. HOUND 13. All Rights Reserved.</p>
+					<img src="assets/img/12.svg" class="alert" alt="輔12">
 				</div>
 			</div>
 		</div>
@@ -707,15 +703,29 @@
 	<script type="text/javascript" src="assets/js/swiper.min.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 	<script type="text/javascript">
-		$('#fullpage').fullpage({
-			anchors: ['header', 'gameMenu', 'monster', 'fellow', 'equipmentMain', 'equipmentSub'],
-			verticalCentered: true,
-			menu: '#nav',
-			//lockAnchors :true,
-			//autoScrolling: false,
-			lazyLoading: true,
-			responsiveHeight: 900,
-			navigation: true
+		$(".storage.mobile").remove();
+		$(document).ready(function() {
+			var width = $(window).width();
+			if (width >= 1024) {
+				$('#fullpage').fullpage({
+					anchors: ['header', 'gameMenu', 'monster', 'fellow', 'equipmentMain', 'equipmentSub'],
+					verticalCentered: true,
+					menu: '#nav',
+					lazyLoading: true,
+					navigation: false
+				});
+			} else {
+				$('#fullpage').fullpage({
+					anchors: ['header', 'storage','gameMenu', 'monster', 'fellow', 'equipmentMain', 'equipmentSub'],
+					verticalCentered: true,
+					menu: '#nav',
+					//lockAnchors :true,
+					//autoScrolling: false,
+					lazyLoading: true,
+					responsiveHeight: 900,
+					navigation: false
+				});
+			}
 		});
 	</script>
 </body>
