--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 				</div>
 			</div>
 		</footer>
-		<div class="animation mobile"><i class="icon icon-down"></i></div>
+		<div class="animation"><i class="icon icon-down"></i></div>
 		<div class="black"></div>
 		<div class="lightbox lightbox--video">
 			<div class="lightbox__wrap">
